[package]
name = "jj-inspect"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI stack review for Jujutsu (jj)"
publish = false

[dependencies]
anyhow = "1.0"
crossterm = { workspace = true, features = ["events", "windows"] }
unicode-width = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
